Upgrade actions/checkout to v4
Update checkout action to version 4 and enable submodules.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,9 @@ jobs:
 
     steps:
     - name: Checkout Repository
-      uses: actions/checkout@main
+      uses: actions/checkout@v4
+      with:
+        submodules: recursive
 
     - name: SetUp environment
       run: |
