--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,6 @@ jobs:
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v4
-      with:
-        submodules: recursive
 
     - name: SetUp environment
       run: |
@@ -37,27 +35,28 @@ jobs:
         sudo -E apt-get -qq clean > /dev/null 2>&1
         sudo pip3 install gdown > /dev/null 2>&1
         sudo pip3 install git+https://github.com/Juvenal-Yescas/mediafire-dl > /dev/null 2>&1
-        wget https://mega.nz/linux/repo/xUbuntu_22.04/amd64/megacmd-xUbuntu_22.04_amd64.deb && sudo apt install "$PWD/megacmd-xUbuntu_22.04_amd64.deb" > /dev/null 2>&1
+        wget https://mega.nz/linux/repo/xUbuntu_22.04/amd64/megacmd-xUbuntu_22.04_amd64.deb
+        sudo apt install "$PWD/megacmd-xUbuntu_22.04_amd64.deb" > /dev/null 2>&1
         sudo mkdir -p openwrt > /dev/null 2>&1
 
     - name: Download Firmware
       run: |
-        if [ $(echo ${{ github.event.inputs.fw_link }} | grep "drive.") ]; then
-          if [ $(echo ${{ github.event.inputs.fw_link }} | awk -F "/" '{print $6}') ]; then
-            link_gdrive=$(echo ${{ github.event.inputs.fw_link }} | awk -F "/" '{print $6}')
+        if echo "${{ github.event.inputs.fw_link }}" | grep -q "drive."; then
+          if echo "${{ github.event.inputs.fw_link }}" | awk -F "/" '{print $6}' | grep -q "."; then
+            link_gdrive=$(echo "${{ github.event.inputs.fw_link }}" | awk -F "/" '{print $6}')
           else
-            link_gdrive=$(echo ${{ github.event.inputs.fw_link }} | awk -F "/" '{print $4}' | awk -F "?id=" '{print $2}'|awk -F "&export" '{print $1}')
+            link_gdrive=$(echo "${{ github.event.inputs.fw_link }}" | awk -F "/" '{print $4}' | awk -F "?id=" '{print $2}' | awk -F "&export" '{print $1}')
           fi
-          sudo gdown ${link_gdrive} -O openwrt/$(echo "${{ github.event.inputs.fw_link }}" | awk -F/ '{print $NF}') >/dev/null
+          sudo gdown ${link_gdrive} -O openwrt/$(basename "${{ github.event.inputs.fw_link }}") >/dev/null
         else
-          if [ $(echo ${{ github.event.inputs.fw_link }} | grep "mediafire.com") ]; then
-            sudo mediafire-dl ${{ github.event.inputs.fw_link }} -o openwrt/$(echo "${{ github.event.inputs.fw_link }}" | awk -F/ '{print $NF}') >/dev/null
+          if echo "${{ github.event.inputs.fw_link }}" | grep -q "mediafire.com"; then
+            sudo mediafire-dl "${{ github.event.inputs.fw_link }}" -o openwrt/$(basename "${{ github.event.inputs.fw_link }}") >/dev/null
           else
-            if [ $(echo ${{ github.event.inputs.fw_link }} | grep "mega.nz") ]; then
-              file_mega=$(sudo mega-get ${{ github.event.inputs.fw_link }} | awk -F: '{print $2}')
-              sudo mv ${file_mega} openwrt/$(echo "${{ github.event.inputs.fw_link }}" | awk -F/ '{print $NF}')
+            if echo "${{ github.event.inputs.fw_link }}" | grep -q "mega.nz"; then
+              file_mega=$(sudo mega-get "${{ github.event.inputs.fw_link }}" | awk -F: '{print $2}')
+              sudo mv ${file_mega} openwrt/$(basename "${{ github.event.inputs.fw_link }}")
             else
-              sudo wget --no-check-certificate ${{ github.event.inputs.fw_link }} -O openwrt/$(echo "${{ github.event.inputs.fw_link }}" | awk -F/ '{print $NF}') >/dev/null
+              sudo wget --no-check-certificate "${{ github.event.inputs.fw_link }}" -O openwrt/$(basename "${{ github.event.inputs.fw_link }}") >/dev/null
             fi
           fi
         fi
@@ -70,51 +69,48 @@ jobs:
         no_extension=$(basename "$filename" | sed -E 's/\.(gz|xz)$//')
         echo "file_type=$extension" >> $GITHUB_ENV
         echo "file_name=$no_extension" >> $GITHUB_ENV
-        
+
     - name: Extract firmware
       run: |
         sudo mkdir -p openwrt/boot
         sudo mv BootCardMaker/u-boot.bin openwrt/
         sudo mv files/mod-boot-sdcard.tar.gz openwrt/
         cd openwrt
-        if [ ${{ env.file_type }} = "img.gz" ]; then
-          sudo gunzip ${{ env.file_name }}.gz
+        if [ "${{ env.file_type }}" = "img.gz" ]; then
+          sudo gunzip "${{ env.file_name }}.gz"
         else
-          sudo unxz ${{ env.file_name }}.xz
+          sudo unxz "${{ env.file_name }}.xz"
         fi
-        device=$(sudo losetup -fP --show ${{ env.file_name }})
+        device=$(sudo losetup -fP --show "${{ env.file_name }}")
         sudo mount ${device}p1 boot
         sudo tar -xzvf mod-boot-sdcard.tar.gz -C boot
-        uenv=$(sudo cat boot/uEnv.txt | grep APPEND | awk -F "root=" '{print $2}')
-        extlinux=$(sudo cat boot/extlinux/extlinux.conf | grep append | awk -F "root=" '{print $2}')
-        sudo sed -i "s/$extlinux/$uenv/g" boot/extlinux/extlinux.conf
-        sleep 1
-        if [ ${{ github.event.inputs.bootloader }} = "b860h" ]; then
+        uenv=$(sudo grep APPEND boot/uEnv.txt | awk -F "root=" '{print $2}')
+        extlinux=$(sudo grep append boot/extlinux/extlinux.conf | awk -F "root=" '{print $2}')
+        sudo sed -i "s|$extlinux|$uenv|g" boot/extlinux/extlinux.conf
+        if [ "${{ github.event.inputs.bootloader }}" = "b860h" ]; then
           dtb="meson-gxl-s905x-b860h.dtb"
-        elif [ ${{ github.event.inputs.bootloader }} = "hg680p" ]; then
+        else
           dtb="meson-gxl-s905x-p212.dtb"
         fi
-        boot=$(sudo cat boot/boot.ini | grep dtb | awk -F "/" '{print $4}' | cut -d'"' -f1)
-        sudo sed -i "s/$boot/$dtb/g" boot/boot.ini
-        sudo sed -i "s/$boot/$dtb/g" boot/extlinux/extlinux.conf
-        sudo sed -i "s/$boot/$dtb/g" boot/uEnv.txt
+        boot=$(sudo grep dtb boot/boot.ini | awk -F "/" '{print $4}' | cut -d'"' -f1)
+        sudo sed -i "s|$boot|$dtb|g" boot/boot.ini
+        sudo sed -i "s|$boot|$dtb|g" boot/extlinux/extlinux.conf
+        sudo sed -i "s|$boot|$dtb|g" boot/uEnv.txt
         sudo umount ${device}p1
-        sleep 1
-        sudo dd if=u-boot.bin of=${device} bs=1 count=444 conv=fsync 2>/dev/null
-        sudo dd if=u-boot.bin of=${device} bs=512 skip=1 seek=1 conv=fsync 2>/dev/null
+        sudo dd if=u-boot.bin of=${device} bs=1 count=444 conv=fsync
+        sudo dd if=u-boot.bin of=${device} bs=512 skip=1 seek=1 conv=fsync
         sudo losetup -d ${device}
-        sleep 1
-        if [ ${{ env.file_type }} = "img.gz" ]; then
-          sudo gzip ${{ env.file_name }}
+        if [ "${{ env.file_type }}" = "img.gz" ]; then
+          sudo gzip "${{ env.file_name }}"
         else
-          sudo xz ${{ env.file_name }}
+          sudo xz "${{ env.file_name }}"
         fi
 
     - name: Find Firmware
       run: |
         FILE_PATH=$(find -name "*.img.*")
         echo "FILE_PATH=$FILE_PATH" >> $GITHUB_ENV
-        echo -e "FILE_PATH path: $FILE_PATH"
+        echo "FILE PATH: $FILE_PATH"
 
     - name: Create Release
       uses: softprops/action-gh-release@v2
@@ -125,7 +121,6 @@ jobs:
         tag_name: All
         draft: false
         prerelease: false
-        files: |
-              ${{ env.FILE_PATH }}
+        files: ${{ env.FILE_PATH }}
         body: |
-              Mod SDCard
+          Mod SDCard
